# news-tagger

./: .gitignore  Cargo.toml  README.md  flake.nix  state.sqlite
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
.ralph/: ralph.toml
.ralph/projects/issue-3/: .last-prompt-hash  project.toml  prompt-review.md  prompt.md
.ralph/projects/issue-3/loops/001-dependencies-key-parsing-and-constructor-refactor/: 20260305041225-spec.md  20260305041752-impl-notes.md  20260305042354-qa-001-fail.md  20260305042519-impl-qa-response-001.md  20260305043023-qa-002-pass.md  20260305043115-review-approved.md
.ralph/projects/issue-3/loops/002-completion/: 20260305043209-termination-request.md  20260305043252-completer-verdict-claude-opus.md  20260305043402-completer-verdict-codex-gpt-5-3-codex-xhigh.md  20260305043458-completer-verdict-gemini-gemini-3-pro-preview.md  20260305043626-acceptance-pass-claudeopus.md  20260305044002-acceptance-fail-codexgpt-53-codex-xhigh.md
.ralph/projects/issue-3/loops/003-repository-hygiene-remove-tracked-runtime-artifact/: 20260305044055-spec.md  20260305044159-impl-notes.md  20260305044323-qa-001-pass.md  20260305044353-review-approved.md
.ralph/projects/issue-3/loops/004-completion/: 20260305044502-termination-request.md  20260305044611-completer-verdict-claude-opus.md  20260305044812-completer-verdict-codex-gpt-5-3-codex-xhigh.md  20260305044905-completer-verdict-gemini-gemini-3-pro-preview.md  20260305045008-acceptance-pass-claudeopus.md  20260305045236-acceptance-pass-codexgpt-53-codex-xhigh.md  20260305045607-final-review-proposals-claude.md  20260305045845-final-review-proposals-codex.md  20260305045923-final-review-proposals-gemini.md  20260305050014-final-review-planner-positions.md  20260305050042-final-review-votes-claude.md  20260305050059-final-review-votes-codex.md  20260305050121-final-review-exit-approved.md  20260305050121-final-review-votes-gemini.md  final-review-config.json
.ralph/quick-prd/4afced732dab/: draft.md  meta.json  review-1.json  revision-1.md
crates/adapters/: Cargo.toml
crates/adapters/src/: definitions_fs.rs  jsonl_source.rs  lib.rs  outbox.rs  state_memory.rs  state_sqlite.rs
crates/adapters/src/llm/: anthropic.rs  claude_code.rs  codex.rs  gemini.rs  local_command.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs  opencode.rs  stub.rs
crates/adapters/src/nostr/: mod.rs
crates/adapters/src/x_api/: mod.rs  read.rs  write.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  config.rs  main.rs
crates/cli/src/commands/: classify.rs  config.rs  curate.rs  definitions.rs  doctor.rs  fetch.rs  mod.rs  run.rs
crates/cli/tests/: cli.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs  model.rs  policy.rs  ports.rs
crates/domain/src/usecases/: classify.rs  mod.rs  render.rs  run_loop.rs
fixtures/definitions/: example_tag.md
fixtures/llm/: sample_response.json
fixtures/posts/: sample_x_post.json
