[package]
name = "news-tagger-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
news-tagger-domain = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }

# Errors
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
time = { workspace = true }

# Database
sqlx = { workspace = true }

# Crypto
sha2 = { workspace = true }

# Secrets
secrecy = { workspace = true }

# UUID
uuid = { workspace = true }

# Regex for frontmatter parsing
regex = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
wiremock = { workspace = true }
tempfile = { workspace = true }
