[package]
name = "news-tagger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tool for classifying posts using LLM-powered narrative tagging"
default-run = "news-tagger"

[[bin]]
name = "news-tagger"
path = "src/main.rs"

[dependencies]
news-tagger-domain.workspace = true
news-tagger-adapters.workspace = true

clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
config.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
secrecy.workspace = true
sha2.workspace = true
time.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
